<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Android_clientActivity!</string>
    <string name="app_name">Android_client</string>
    <string name="register_title">Đăng ký</string>
    <string name="register_email">E-mail:</string>
    <string name="register_nickname">Tên Thành Viên (Nickname):</string>
    <string name="register_password">Mật Khẩu (Password):</string>
    <string name="register_sex">Giới Tính (Sex):</string>
    <string name="register_phone">Số Điện Thoại (Phone):</string>
    <string name="register_name">Họ Tên (Full Name):</string>
    <string name="register_address">Địa Chỉ (Address):</string>
    <string name="register_birthday">Ngày Sinh (Date of Birth):</string>
    <string name="register_check">Tôi đồng ý với các điều khoản Thỏa thuận sử dụng</string>
    <string name="register_button">Tạo Tài Khoản</string>
    <string name="login_username">Tên đăng nhập (hoặc e-mail):</string>
    <string name="login_password">Mật khẩu:</string>
    <string name="login_register">Đăng Ký</string>
    <string name="login_login">Đăng Nhập</string>
    <string name="exit">Bạn có muốn thoát khỏi chương trình?</string>
    <string name="about_school">Trường Đại Học Công Nghệ Thông Tin</string>
    <string name="about_doan">Luận văn:</string>
    <string name="about_name">Xây dựng ứng dụng thương mại điện tử trên nền tảng điện toán đám mây và Android.</string>
    <string name="about_ownera">Nguyễn Thanh Phong 07520440</string>
    <string name="about_ownerb">Nguyễn Thị Thúy</string>
    <string name="about_teachera">Ths.Phạm Thi Vương</string>
    <string name="about_teacherb">Ths.Lê Ngọc Thạch</string>
    <string name="about_khoa">Khoa Mạng Máy Tính &amp; Truyền Thông</string>
    <string name="account_add_title">Nạp Xu</string>
    <string name="account_add_ok">Nạp Xu</string>
    <string name="menu_search">Saved searches</string>
    <string name="menu_favorite">Favourite</string>
    <string name="menu_reminder">Reminders</string>
    <string name="menu_message">Messages</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_account">My account</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_DEAL">Top Deals</string>
    <string name="menu_best">Best Sellers</string>
    <string name="menu_browser">Browse</string>
    <string name="account_transfer_title">Chuyển tài khoản Xu</string>
    <string name="account_transfer_ok">Đồng ý chuyển khoản</string>
    <string name="account_transfer_owner">Tài khoản của bạn:</string>
    <string name="account_transfer_user">Tài khoản muốn chuyển Xu</string>
    <string name="account_transfer_number">Số lượng Xu muốn chuyển</string>
    <string name="menu_home">Home</string>
    <string name="payment_content_title">Payment</string>
    <string name="payment_content_add">Nạp Xu</string>
    <string name="payment_content_transfer">Chuyển tài khoản Xu</string>
    <string name="myaccount_title">My Account</string>
    <string name="myaccount_info">Thông tin tài khoản</string>
    <string name="myaccount_changepass">Thay đổi mật khẩu</string>
    <string name="myaccount_payment">Thanh toán Xu</string>
    <string name="myaccount_history">Lịch sử mua hàng</string>
    <string name="myaccount_order">Đặt hàng </string>
    <string name="accountinfo_title">Thông tin tài khoản</string>
    <string name="accountinfo_taba">Thông tin cơ bản:</string>
    <string name="accountinfo_tabb">Thông tin chi tiết:</string>
    <string name="accountinfo_titleb">Thông tin chi tiết:</string>
    <string name="accountinfo_update">Sửa thông tin</string>
    <string name="menu_login">Login</string>
    <string name="favourite_title">Favourite</string>
</resources>
