<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/my_background"
	android:gravity="center_horizontal">
	<TextView android:layout_marginTop="20dp" android:id="@+id/textView1"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_height="wrap_content" android:textSize="16dp"
		android:textColor="@color/black" android:layout_width="wrap_content"
		android:text="@string/about_school"></TextView>
	<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_height="wrap_content" android:textSize="14dp"
		android:textColor="@color/black" android:layout_width="wrap_content"
		android:text="@string/about_khoa"></TextView>
	<TextView android:layout_marginTop="20dp" android:id="@+id/textView1"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_height="wrap_content" android:textSize="16dp"
		android:textColor="@color/black" android:layout_width="wrap_content"
		android:text="@string/about_doan"></TextView>
	<ImageView android:src="@drawable/shoprite_logo"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/imageView1"></ImageView>
	<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_height="wrap_content" android:textSize="16dp"
		android:textColor="@color/black" android:layout_width="wrap_content"
		android:text="@string/about_teachera"></TextView>
	<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall"
	android:layout_height="wrap_content" android:textSize="16dp"
	android:textColor="@color/black" android:layout_width="wrap_content"
	android:text="@string/about_teacherb"></TextView>
	<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_height="wrap_content" android:textSize="16dp"
		android:textColor="@color/black" android:layout_width="wrap_content"
		android:text="@string/about_ownera"></TextView>
	<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_height="wrap_content" android:textSize="16dp"
		android:textColor="@color/black" android:layout_width="wrap_content"
		android:text="@string/about_ownerb"></TextView>
</LinearLayout>
