<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:background="@color/white_smoke"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView android:layout_height="wrap_content"
			android:layout_weight="1.0" android:layout_width="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:id="@+id/textView2" android:text="TextView"></TextView>
		<Button android:layout_width="wrap_content" android:background="@drawable/button_exit"
			android:layout_height="wrap_content" android:id="@+id/login_exit"></Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:layout_width="wrap_content"
			android:textColor="@color/black" android:layout_height="wrap_content"
			android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/login_username"></TextView>
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/login_username">
			<requestFocus></requestFocus>
		</EditText>
		<TextView android:layout_width="wrap_content"
			android:textColor="@color/black" android:layout_height="wrap_content"
			android:id="@+id/login_password" android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/login_password"></TextView>
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/editText2"
			android:inputType="textPassword"></EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout3"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal">
		<Button android:layout_width="fill_parent" android:layout_weight="1.0" android:background="@drawable/button_login"
			android:layout_height="wrap_content" android:id="@+id/login_ok"
			android:text="@string/login_login"></Button>
		<Button android:layout_width="wrap_content" android:background="@drawable/button_register"
			android:layout_height="wrap_content" android:id="@+id/login_register"
			android:text="@string/login_register"></Button>
	</LinearLayout>

</LinearLayout>
